--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -8,15 +8,15 @@
   <title>Offline support via Service Worker</title>
 
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/bootstrap/3.3.4/bootstrap.min.css">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <script src="/js/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
+  <script src="/js/libs/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <link rel="icon" href="/assets/favicon.ico">
+  <link rel="icon" href="/favicon.ico">
 </head>
 <body>
 
@@ -51,10 +51,10 @@
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="/js/libs/jquery/1.11.2/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="/js/libs/bootstrap/3.3.4/bootstrap.min.js"></script>
 
-<script src="/assets/main.js"></script>
+<script src="/js/main.js"></script>
 </body>
 </html>
