--- a/src/main/resources/assets/index.htm
+++ b/src/main/resources/assets/index.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,13 +10,18 @@
   <!-- Bootstrap -->
   <link rel="stylesheet" href="/css/bootstrap/3.3.4/bootstrap.min.css">
 
+  <style type="text/css">
+    .js #no-js-text {display:none;}
+  </style>
+
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
   <script src="/js/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="/js/libs/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <link rel="icon" href="/favicon.ico">
+  <script>(function(H){H.className=H.className.replace(/\bno-js\b/,'js')})(document.documentElement)</script>
+  <link rel="icon" href="/assets/favicon.ico">
 </head>
 <body>
 
@@ -39,6 +44,14 @@
 <div class="container">
 
   <h1>Persons with offline support</h1>
+
+  <div id="no-js-text" class="has-error">
+    <span class="help-block">You have Javascript disabled, which breaks Service Worker functionality and will prevent offline functionality</span>
+  </div>
+
+  <div id="no-service-worker-text" class="has-error" style="display:none;">
+    <span class="help-block">Your browser does not support or cannot run the Service Worker necessary to provide offline functionality</span>
+  </div>
 
   <a href="/persons">View Persons</a>
 
